11_02_2025 VISUALIZACIÓN UNIDAD MEDIDA, STOCK RESULTANTE, Y CODIGO GRUPO EN VISUALIZACIÓN

--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -16,8 +16,7 @@
   </thead>
 
   <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
-    @for (item of datosInventarioslista | paginate: { itemsPerPage: 10,
-    currentPage: p }; track $index;) {
+    @for (item of datosInventarioslista; track $index;) {
     <tr>
       <td class="size-px whitespace-nowrap">
         <td-table-descripcion [descripcion]="item.descripcion" />
