--- a/src/app/Ui/Modules/Carga_Inventario/Page/detalle-carga-inventarios/detalle-carga-inventarios.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/detalle-carga-inventarios/detalle-carga-inventarios.component.html
@@ -130,7 +130,7 @@
                   <ng-container matColumnDef="codgrupo">
                     <th mat-header-cell *matHeaderCellDef>Cod. Grupo</th>
                     <td mat-cell *matCellDef="let element">
-                      {{ element.codgrupo }}
+                      {{ element.codigogrupo }}
                     </td>
                   </ng-container>
 
