--- a/src/app/Ui/Modules/Carga_Inventario/Components/header-page/header-page.component.css
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/header-page/header-page.component.css
@@ -1,4 +1,4 @@
 .container-header {
-  height: 8rem;
+  height: auto;
   background: linear-gradient(to right, var(--color-principal-3), var(--color-principal-1) );
 }
