--- a/src/app/Ui/Modules/configuration/Usuarios/components/header-table-usuarios/header-table-usuarios.component.css
+++ b/src/app/Ui/Modules/configuration/Usuarios/components/header-table-usuarios/header-table-usuarios.component.css
@@ -1,4 +1,4 @@
 .container-header {
-  height: 8rem;
+  height: auto;
   background: linear-gradient(to right, var(--color-principal-3), var(--color-principal-1) );
 }
