--- a/src/app/Ui/Modules/login/components/apartado-derecho/apartado-derecho.component.html
+++ b/src/app/Ui/Modules/login/components/apartado-derecho/apartado-derecho.component.html
@@ -20,7 +20,7 @@
               type="text"
               id="rucempresa"
               formControlName="rucempresa"
-              class="py-2 px-4 block w-full border border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+              class="py-2 px-4 block w-full border border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none"
               required
               aria-describedby="rucempresa-error"
             />
@@ -36,7 +36,7 @@
               type="text"
               id="username"
               formControlName="idUsuario"
-              class="py-2 px-4 block w-full border border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+              class="py-2 px-4 block w-full border border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none"
               required
               aria-describedby="username-error"
             />
@@ -52,7 +52,7 @@
               type="password"
               id="password"
               formControlName="contrasenia"
-              class="py-2 px-4 block w-full border border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+              class="py-2 px-4 block w-full border border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none"
               required
               aria-describedby="password-error"
             />
