--- a/src/app/Ui/Shared/Components/organisms/header-responsive/header-responsive.component.html
+++ b/src/app/Ui/Shared/Components/organisms/header-responsive/header-responsive.component.html
@@ -35,7 +35,7 @@
         <li
           class="flex items-center text-sm text-gray-800 dark:text-neutral-400"
         >
-          Application Layout
+          DB INVENTORY
           <svg
             class="shrink-0 mx-3 overflow-visible size-2.5 text-gray-400 dark:text-neutral-500"
             width="16"
