--- a/src/app/Ui/Modules/configuration/Usuarios/page/registro-usuario/registro-usuario.component.html
+++ b/src/app/Ui/Modules/configuration/Usuarios/page/registro-usuario/registro-usuario.component.html
@@ -1,38 +1,22 @@
-<div
-  id="registro-usuarios"
-  class="hs-overlay [--overlay-backdrop:static] hidden size-full fixed top-0 start-0 z-[80] overflow-x-hidden overflow-y-auto pointer-events-none"
-  role="dialog"
-  tabindex="-1"
-  aria-labelledby="hs-static-backdrop-modal-label"
-  data-hs-overlay-keyboard="false"
->
-  <div
-    class="hs-overlay-open:mt-7 hs-overlay-open:opacity-100 hs-overlay-open:duration-500 mt-0 opacity-0 ease-out transition-all sm:max-w-lg sm:w-full m-3 sm:mx-auto"
-  >
-    <div
-      class="flex flex-col bg-white border shadow-sm rounded-xl pointer-events-auto dark:bg-neutral-800 dark:border-neutral-700 dark:shadow-neutral-700/70"
-    >
+<!-- Modal -->
+<div class="modal fade" id="modalRegistroUsuario" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header  bg-fondo-header ">
 
-      <div class="bg-fondo-header relative overflow-hidden min-h-32 text-center rounded-t-xl">
+        <div class="relative overflow-hidden min-h-[auto] text-left rounded-t-xl">
+          <h2 class="mt-8 text-2xl  font-bold text-white dark:text-neutral-200">
+            Usu<span class="text-[#00D1AE]">arios</span>
+          </h2>
 
-        <div class="absolute top-2 end-2 ">
-          <button type="button" class="flex justify-center items-center size-7 text-sm font-semibold rounded-full border border-transparent text-white/70 hover:bg-white/10 focus:outline-none focus:bg-white/10 disabled:opacity-50 disabled:pointer-events-none" aria-label="Close" data-hs-overlay="#registro-usuarios">
-            <span class="sr-only">Close</span>
-            <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 6 6 18"/><path d="m6 6 12 12"/></svg>
-          </button>
+          <p class="mt-1 text-sm text-gray-100 dark:text-neutral-400">
+            Ingresa los datos necesarios para el nuevo usuario
+          </p>
+
         </div>
-
-        <h2 class="mt-8 text-2xl  font-bold text-white dark:text-neutral-200">
-          Usu<span class="text-[#00D1AE]">arios</span>
-        </h2>
-
-        <p class="mt-4 text-sm text-gray-100 dark:text-neutral-400">
-          Ingresa los datos necesarios para el nuevo usuario
-        </p>
-
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-
-      <div class="p-4 overflow-y-auto">
+      <div class="modal-body">
         <form (ngSubmit)="guardarUsuario()" [formGroup]="formularioRegistro">
           <div class="grid sm:grid-cols-12 gap-2 sm:gap-6">
             <div class="sm:col-span-3">
@@ -206,17 +190,8 @@
 
           </div>
 
-
-          <!-- End Grid -->
-
-          <div class="mt-5 flex justify-end gap-x-2">
-            <button
-              type="button"
-              class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none focus:outline-none focus:bg-gray-50 dark:bg-transparent dark:border-neutral-700 dark:text-neutral-300 dark:hover:bg-neutral-800 dark:focus:bg-neutral-800"
-              data-hs-overlay="#registro-empresas"
-            >
-              Cancel
-            </button>
+          <div class="modal-footer mt-3">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
             <button
               type="submit"
               class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-none focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none"
