--- a/src/app/Ui/Modules/configuration/Empresas/page/registro-empresa/registro-empresa.component.css
+++ b/src/app/Ui/Modules/configuration/Empresas/page/registro-empresa/registro-empresa.component.css
@@ -1,5 +1,5 @@
 .bg-fondo-header {
-  background-image: url('../../../../../../../../assets/images/bg_fondo.webp');
+  background-image: url('../../../../../../../assets/images/bg_fondo.webp');
   background-repeat: no-repeat;
   object-fit: contain;
   background-size: cover;
