--- a/src/app/Ui/Shared/Components/organisms/header-buscador-usuario-movil/header-buscador-usuario-movil.component.html
+++ b/src/app/Ui/Shared/Components/organisms/header-buscador-usuario-movil/header-buscador-usuario-movil.component.html
@@ -17,7 +17,7 @@
     class="w-full flex items-center justify-end ms-auto md:justify-between gap-x-1 md:gap-x-3"
   >
     <div class="hidden md:block">
-      <div class="relative">
+      <!-- <div class="relative">
         <div
           class="absolute inset-y-0 start-0 flex items-center pointer-events-none z-20 ps-3.5"
         >
@@ -107,7 +107,7 @@
           </span>
           <span class="text-xs">/</span>
         </div>
-      </div>
+      </div> -->
     </div>
 
     <div class="flex flex-row items-center justify-end gap-1">
