12_02_2025 DESHABILITAR OPCION VER DETALLE EMPRESAS

--- a/src/app/Ui/Modules/configuration/Empresas/components/tables/table-lista-empresas/table-lista-empresas.component.html
+++ b/src/app/Ui/Modules/configuration/Empresas/components/tables/table-lista-empresas/table-lista-empresas.component.html
@@ -15,7 +15,7 @@
         <header-table-title [title]="'estado'" />
       </th>
 
-      <th scope="col" class="px-6 py-3 text-end"></th>
+      <!-- <th scope="col" class="px-6 py-3 text-end"></th> -->
     </tr>
   </thead>
 
@@ -37,9 +37,9 @@
             }
           </button>
         </td>
-        <td class="size-px whitespace-nowrap">
+        <!-- <td class="size-px whitespace-nowrap">
           <body-table-button-icon [text]="'Detalle'" />
-        </td>
+        </td> -->
       </tr>
     }
   </tbody>
