12_02_2025 DESHABILITAR OPCION VER DETALLE USUARIOS

--- a/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.html
+++ b/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.html
@@ -43,7 +43,7 @@
           </div>
         </th>
 
-        <th scope="col" class="px-6 py-3 text-end"></th>
+        <!-- <th scope="col" class="px-6 py-3 text-end"></th> -->
       </tr>
     </thead>
 
@@ -103,7 +103,7 @@
               </span>
             </button>
           </td>
-          <td class="size-px whitespace-nowrap">
+          <!-- <td class="size-px whitespace-nowrap">
             <button type="button" class="block" aria-haspopup="dialog" aria-expanded="false" aria-controls="hs-ai-invoice-modal" data-hs-overlay="#hs-ai-invoice-modal">
               <span class="px-6 py-1.5">
                 <span class="py-1 px-2 inline-flex justify-center items-center gap-2 rounded-lg border font-medium bg-white text-gray-700 shadow-sm align-middle hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-white focus:ring-blue-600 transition-all text-sm dark:bg-neutral-900 dark:hover:bg-neutral-800 dark:border-neutral-700 dark:text-neutral-400 dark:hover:text-white dark:focus:ring-offset-gray-800">
@@ -115,7 +115,7 @@
                 </span>
               </span>
             </button>
-          </td>
+          </td> -->
         </tr>
       }
     </tbody>
