12_02_2025 DESHABILITAR OPCION DESCARGAR PLANTILLA CARGA INVENTARIO

--- a/src/app/Ui/Modules/Carga_Inventario/Components/header-page/header-page.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/header-page/header-page.component.html
@@ -14,7 +14,7 @@
     </p>
   </div>
   <div class="inline-flex gap-x-2">
-    <button-descargar-plantilla />
+    <!-- <button-descargar-plantilla /> -->
     <button-nuevo-inventario />
   </div>
 </div>
