12_02_2025 VISUALIZACIÓN DE DATOS LOGIN EN TEMA OSCURO

--- a/src/app/Ui/Modules/login/components/apartado-derecho/apartado-derecho.component.html
+++ b/src/app/Ui/Modules/login/components/apartado-derecho/apartado-derecho.component.html
@@ -12,7 +12,7 @@
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <div class="grid gap-y-4">
         <div>
-          <label for="rucempresa" class="block text-sm mb-2 dark:text-white"
+          <label for="rucempresa" class="block text-sm mb-2 "
             >RUC Empresa</label
           >
           <div class="relative">
@@ -28,7 +28,7 @@
         </div>
 
         <div>
-          <label for="username" class="block text-sm mb-2 dark:text-white"
+          <label for="username" class="block text-sm mb-2"
             >Usuario</label
           >
           <div class="relative">
@@ -44,7 +44,7 @@
         </div>
 
         <div>
-          <label for="password" class="block text-sm mb-2 dark:text-white"
+          <label for="password" class="block text-sm mb-2 "
             >Contraseña</label
           >
           <div class="relative">
