12_02_2025 ARREGLO DISEO LOGIN

--- a/src/app/Ui/Modules/login/components/apartado-izquierdo/apartado-izquierdo.component.html
+++ b/src/app/Ui/Modules/login/components/apartado-izquierdo/apartado-izquierdo.component.html
@@ -3,15 +3,7 @@
 <h2 class="text-4xl p-2 text-gray-100 text-left">
   Haz tus
   <span class="text-decoration">
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      width="190"
-      height="24"
-      viewBox="0 0 190 5"
-      fill="none"
-    >
-      <rect width="190" height="24" rx="1" fill="#00D1AE"></rect></svg
-    ><span class="rslt-text">inventarios</span>
+    <span class="rslt-text">inventarios</span>
   </span>
   más dinámicos y flexibles
 </h2>
