--- a/src/app/Ui/Modules/login/page/login-page/login-page.component.html
+++ b/src/app/Ui/Modules/login/page/login-page/login-page.component.html
@@ -2,7 +2,7 @@
   <div class="h-[100vh] pt-7 bg-fondo-login grid place-content-center">
     <div class="container flex justify-center items-center gap-20">
       <div
-        class="hidden md:block md:end-0 flex-1 max-w-md mx-auto m-7 rounded-xl shadow-sm dark:bg-neutral-900 dark:border-neutral-700 lg:max-w-lg"
+        class="hidden md:block md:end-0 flex-1 max-w-md mx-auto m-7 rounded-xl  dark:bg-neutral-900 dark:border-neutral-700 lg:max-w-lg"
       >
         <apartado-izquierdo />
       </div>
