--- a/src/app/Ui/Modules/Carga_Inventario/Components/header-page/header-page.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/header-page/header-page.component.html
@@ -5,10 +5,10 @@
     <h2 class="text-xl font-semibold text-gray-100 dark:text-neutral-200">
       CARGA INVENTARIO
     </h2>
-    <p class="text-sm text-gray-100 dark:text-neutral-400">
+    <p class="text-sm text-gray-100">
       Carga tus inventarios de
       <a
-        class="inline-flex items-center gap-x-1.5 text-gray-100 decoration-2 hover:underline focus:outline-none focus:underline font-medium dark:text-blue-500"
+        class="inline-flex items-center gap-x-1.5 text-gray-100 decoration-2 hover:underline focus:outline-none focus:underline font-medium"
         >manera sensilla</a
       >
     </p>
