--- a/src/app/Ui/Modules/Carga_Inventario/Page/registro-carga-inventarios/registro-carga-inventarios.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/registro-carga-inventarios/registro-carga-inventarios.component.html
@@ -26,8 +26,6 @@
         <form (ngSubmit)="guardarCabecera()" [formGroup]="formularioRegistro">
           <div class="px-4 py-1 gap-0 text-center overflow-y-auto">
             <div class="flex-1">
-
-
               <div class="mb-1">
                 <label for="empresas" class="form-label">Empresas</label>
                 <select
@@ -37,6 +35,9 @@
                   class="form-select"
                   aria-label="Default select example"
                 >
+                  <option value="" disabled selected>
+                    Seleccione una empresa
+                  </option>
                   @for (item of DatosEmpresas; track $index) {
                   <option [value]="item.rucempresa">
                     {{ item.rucempresa }} - {{ item.razonsocial }}
@@ -167,261 +168,24 @@
                   >
                     Cancelar
                   </button>
-                  <button type="submit" class="btn btn-primary">Guardar</button>
-                  <!-- [disabled]="!formularioRegistro.valid" -->
+
+                  <button
+                    [disabled]="
+                      !HayArchivo ||
+                      formularioRegistro.controls['rucempresa'].invalid ||
+                      formularioRegistro.controls['descripcion'].invalid
+                    "
+                    type="submit"
+                    class="btn btn-primary"
+                  >
+                    Guardar
+                  </button>
                 </div>
               </div>
             </div>
           </div>
         </form>
       </div>
-    </div>
-  </div>
-</div>
-
-<div
-  id="hs-sign-out-alert-small-window"
-  class="hs-overlay hidden size-full fixed top-0 start-0 z-[80] overflow-x-hidden overflow-y-auto modal_registro"
-  role="dialog"
-  tabindex="-1"
-  aria-labelledby="hs-sign-out-alert-small-window-label"
->
-  <div
-    class="hs-overlay-open:mt-7 place-items-center hs-overlay-open:opacity-100 hs-overlay-open:duration-500 mt-0 opacity-0 ease-out transition-all sm:max-w-xs sm:w-full m-3 sm:mx-auto"
-  >
-    <div
-      class="relative flex flex-col w-[40rem] bg-white shadow-lg rounded-xl dark:bg-neutral-900"
-    >
-      <div class="absolute top-2 end-2">
-        <button
-          (click)="limpiarDatosPreview()"
-          type="button"
-          class="size-8 inline-flex justify-center items-center gap-x-2 rounded-full border border-transparent bg-gray-100 text-gray-800 hover:bg-gray-200 focus:outline-none focus:bg-gray-200 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-700 dark:hover:bg-neutral-600 dark:text-neutral-400 dark:focus:bg-neutral-600"
-          aria-label="Close"
-          data-hs-overlay="#hs-sign-out-alert-small-window"
-        >
-          <span class="sr-only">Cerrar</span>
-          <svg
-            class="shrink-0 size-4"
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          >
-            <path d="M18 6 6 18" />
-            <path d="m6 6 12 12" />
-          </svg>
-        </button>
-      </div>
-
-      <form (ngSubmit)="guardarCabecera()" [formGroup]="formularioRegistro">
-        <div class="p-4 gap-8 text-center overflow-y-auto">
-          <div class="flex-1">
-            <div class="text-center">
-              <h3
-                id="hs-ai-modal-label"
-                class="text-lg font-semibold text-gray-800 dark:text-neutral-200"
-              >
-                REGISTRO INVENTARIO
-              </h3>
-              <p class="text-sm text-gray-500 dark:text-neutral-500">
-                Datos a registrar
-              </p>
-            </div>
-
-            <div
-              class="mt-5 mb-5 sm:mt-10 grid grid-cols-2 sm:grid-cols-3 gap-5"
-            >
-              <div>
-                <span
-                  class="block text-xs uppercase text-gray-500 dark:text-neutral-500"
-                  >Fecha Creación:</span
-                >
-                <span
-                  class="block text-sm font-medium text-gray-800 dark:text-neutral-200"
-                  >05/12/2024</span
-                >
-              </div>
-
-              <div>
-                <span
-                  class="block text-xs uppercase text-gray-500 dark:text-neutral-500"
-                  >Estado:</span
-                >
-                <span
-                  class="block text-sm font-medium text-gray-800 dark:text-neutral-200"
-                  >Activo</span
-                >
-              </div>
-
-              <div>
-                <span
-                  class="block text-xs uppercase text-gray-500 dark:text-neutral-500"
-                  >Usuario creador:</span
-                >
-                <span
-                  class="block text-sm font-medium text-gray-800 dark:text-neutral-200"
-                  >Edwin Seclen</span
-                >
-              </div>
-            </div>
-
-            <mat-form-field>
-              <mat-label>Empresas</mat-label>
-              <mat-select
-                formControlName="rucempresa"
-                [(ngModel)]="Cabecera.rucempresa"
-              >
-                @for (item of DatosEmpresas; track item) {
-                <mat-option [value]="item.rucempresa"
-                  >{{ item.rucempresa }} - {{ item.razonsocial }}</mat-option
-                >
-                }
-              </mat-select>
-            </mat-form-field>
-          </div>
-
-          <div class="flex-1 mt-5">
-            <div class="container_seleccion_archivo">
-              <h4 class="mb-0">Seleccionar archivo</h4>
-              <p class="mb-0">De manera rápida y fácil</p>
-
-              <div class="container-space-y-2">
-                <label
-                  for="af-submit-app-upload-images"
-                  class="upload-label dark"
-                >
-                  <input
-                    (change)="onFileSelected($event)"
-                    id="af-submit-app-upload-images"
-                    name="af-submit-app-upload-images"
-                    type="file"
-                    accept=".xlsx, .xls"
-                    class="upload-input"
-                  />
-
-                  <svg
-                    class="upload-icon dark"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
-                    fill="currentColor"
-                    viewBox="0 0 16 16"
-                  >
-                    <path
-                      fill-rule="evenodd"
-                      d="M7.646 5.146a.5.5 0 0 1 .708 0l2 2a.5.5 0 0 1-.708.708L8.5 6.707V10.5a.5.5 0 0 1-1 0V6.707L6.354 7.854a.5.5 0 1 1-.708-.708l2-2z"
-                    />
-                    <path
-                      d="M4.406 3.342A5.53 5.53 0 0 1 8 2c2.69 0 4.923 2 5.166 4.579C14.758 6.804 16 8.137 16 9.773 16 11.569 14.502 13 12.687 13H3.781C1.708 13 0 11.366 0 9.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383zm.653.757c-.757.653-1.153 1.44-1.153 2.056v.448l-.445.049C2.064 6.805 1 7.952 1 9.318 1 10.785 2.23 12 3.781 12h8.906C13.98 12 15 10.988 15 9.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 4.825 10.328 3 8 3a4.53 4.53 0 0 0-2.941 1.1z"
-                    />
-                  </svg>
-
-                  @if (selectedFileName) {
-                  <span class="upload-text dark">
-                    Archivo seleccionado:
-                    <span class="upload-highlight">{{ selectedFileName }}</span>
-                  </span>
-                  }@else {
-                  <span class="upload-text dark">
-                    Haz clic aquí
-                    <span class="upload-highlight"
-                      >para seleccionar su archivo</span
-                    >
-                  </span>
-                  }
-
-                  <br />
-
-                  @if (selectedFileName) {
-                  <span class="upload-help dark"
-                    >Tamaño de archivo: {{ fileDetails.size }} bytes</span
-                  >
-                  }@else {
-                  <span class="upload-help dark"
-                    >Máximo un archivo de 10 Mb</span
-                  >
-                  }
-                </label>
-              </div>
-            </div>
-
-            <div class="containar_ver_detalle">
-              <h4>
-                Items cargados: <span> {{ cantidadDatosExcel }}</span>
-              </h4>
-
-              <button
-                type="button"
-                [disabled]="!HayArchivo"
-                title="any"
-                class="ver_detalle"
-                aria-haspopup="dialog"
-                aria-expanded="false"
-                aria-controls="hs-stacked-overlays-2"
-                data-hs-overlay="#hs-detalle-excel_preview"
-                data-hs-overlay-options='{
-                "isClosePrev": false
-              }'
-              >
-                <img src="../../../../../../assets/svg/icon_ver.svg" alt="" />
-              </button>
-            </div>
-
-            <div class="Nombre_Inventario">
-              <label
-                for="af-submit-project-url"
-                class="inline-block text-sm font-medium text-gray-800 mt-2.5 dark:text-neutral-200"
-              >
-                Nombre
-              </label>
-              @if (selectedFileName) {
-              <input
-                formControlName="descripcion"
-                [(ngModel)]="Cabecera.descripcion"
-                id="af-submit-project-url"
-                type="text"
-                [value]="selectedFileName"
-                class="py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
-                placeholder="Ingresar nombre"
-              />
-              }@else {
-              <input
-                formControlName="descripcion"
-                [(ngModel)]="Cabecera.descripcion"
-                id="af-submit-project-url"
-                type="text"
-                [value]="selectedFileName"
-                class="py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
-                placeholder="Ingresar nombre"
-              />
-              }
-            </div>
-
-            <div class="Buttons_eventos">
-              <button
-                type="button"
-                class="button_cancelar"
-                data-hs-overlay="#hs-sign-out-alert-small-window"
-              >
-                Cancelar
-              </button>
-              <button
-                type="submit"
-                class="py-2.5 px-4 w-full inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none focus:outline-none focus:bg-gray-50 dark:bg-transparent dark:border-neutral-700 dark:text-neutral-300 dark:hover:bg-neutral-800 dark:focus:bg-neutral-800"
-              >
-                Guardar
-              </button>
-              <!-- [disabled]="!formularioRegistro.valid" -->
-            </div>
-          </div>
-        </div>
-      </form>
     </div>
   </div>
 </div>
