12_02_2025 ARREGLO COLORES EN EL DETALLE CARGA INVENTARIO

--- a/src/app/Ui/Modules/Carga_Inventario/Page/detalle-carga-inventarios/detalle-carga-inventarios.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/detalle-carga-inventarios/detalle-carga-inventarios.component.html
@@ -27,11 +27,11 @@
     >
       <div>
         <span
-          class="block text-xs uppercase text-gray-500 dark:text-neutral-500"
+          class="block text-xs uppercase text-gray-500 "
           >Usuario Creador:</span
         >
         <span
-          class="block text-sm font-medium text-gray-800 dark:text-neutral-200"
+          class="block text-sm font-medium text-gray-800 "
           >{{ citaSeleccionada.usuariocreacion }}</span
         >
       </div>
@@ -39,11 +39,11 @@
 
       <div>
         <span
-          class="block text-xs uppercase text-gray-500 dark:text-neutral-500"
+          class="block text-xs uppercase text-gray-500 "
           >Ruc:</span
         >
         <span
-          class="block text-sm font-medium text-gray-800 dark:text-neutral-200"
+          class="block text-sm font-medium text-gray-800 "
           >{{ citaSeleccionada.rucempresa }}</span
         >
       </div>
@@ -51,12 +51,12 @@
 
       <div>
         <span
-          class="block text-xs uppercase text-gray-500 dark:text-neutral-500"
+          class="block text-xs uppercase text-gray-500 "
           >Fecha Registro:</span
         >
         <div class="flex items-center gap-x-2">
           <span
-            class="block text-sm font-medium text-gray-800 dark:text-neutral-200"
+            class="block text-sm font-medium text-gray-800 "
             >{{ citaSeleccionada.fechacarga }}</span
           >
         </div>
@@ -73,7 +73,7 @@
         <div class="-m-1.5 overflow-x-auto">
           <div class="p-1.5 min-w-full inline-block align-middle">
             <div
-              class="bg-white border border-gray-200 rounded-xl shadow-sm overflow-hidden dark:bg-neutral-900 dark:border-neutral-700"
+              class="bg-white border border-gray-200 rounded-xl shadow-sm overflow-hidden "
             >
               <div class="mat-elevation-z8">
                 <table mat-table [dataSource]="dataSource">
