12_02_2025 ADD BUTTON SALIR EN ASIDE

--- a/src/app/Ui/Shared/Components/organisms/menu-opciones/menu-opciones.component.html
+++ b/src/app/Ui/Shared/Components/organisms/menu-opciones/menu-opciones.component.html
@@ -92,4 +92,15 @@
   </div>
 </li>
 } }
+<ul>
+  <li id="menu-item" (click)="logout()">
+    <a
+      class="flex items-center justify-start gap-x-3.5 py-1.5 px-2.5 text-sm text-gray-100 rounded-lg hover:bg-gray-800 focus:outline-none focus:bg-gray-700 dark:bg-neutral-700 dark:text-white"
+      href="#"
+    >
+      Salir
+    </a>
+  </li>
+  
+</ul>
 
