--- a/src/app/Ui/Shared/Components/organisms/header-buscador-usuario-movil/header-buscador-usuario-movil.component.html
+++ b/src/app/Ui/Shared/Components/organisms/header-buscador-usuario-movil/header-buscador-usuario-movil.component.html
@@ -113,7 +113,7 @@
     <div class="flex flex-row items-center justify-end gap-1">
       <button
         type="button"
-        class="size-[38px] relative inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-full border border-transparent text-gray-800 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:hover:bg-neutral-700 dark:focus:bg-neutral-700"
+        class="size-[38px] relative inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-full border border-transparent text-gray-800 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none "
       >
         <svg
           class="shrink-0 size-4"
@@ -135,7 +135,7 @@
 
       <button
         type="button"
-        class="size-[38px] relative inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-full border border-transparent text-gray-800 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:hover:bg-neutral-700 dark:focus:bg-neutral-700"
+        class="size-[38px] relative inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-full border border-transparent text-gray-800 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none "
       >
         <svg
           class="shrink-0 size-4"
