12_02_2025 ARREGLAR MODAL SWAGGER AL CANCELAR REGISTRO

--- a/src/app/Ui/Modules/Carga_Inventario/Page/detalle-carga-inventarios/detalle-carga-inventarios.component.css
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/detalle-carga-inventarios/detalle-carga-inventarios.component.css
@@ -1,3 +1,8 @@
 .ancho {
   width: 75rem;
 }
+
+/* Asegurar que los overlays de Angular Material se muestren por encima del offcanvas */
+.cdk-overlay-container, .cdk-overlay-pane {
+  z-index: 1056 !important; /* Mayor que el offcanvas (1055) */
+}
