--- a/src/app/Ui/Modules/Carga_Inventario/Page/registro-carga-inventarios/registro-carga-inventarios.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/registro-carga-inventarios/registro-carga-inventarios.component.html
@@ -163,6 +163,7 @@
               <div class="modal-footer">
                 <div class="Buttons_eventos">
                   <button
+                  (click)="limpiarDatosPreview()"
                     type="button"
                     data-bs-dismiss="modal"
                   >
