--- a/src/app/Ui/Modules/Carga_Inventario/Page/detalle-carga-inventarios/detalle-carga-inventarios.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/detalle-carga-inventarios/detalle-carga-inventarios.component.html
@@ -175,14 +175,28 @@
                     *matRowDef="let row; columns: displayedColumns"
                   ></tr>
                 </table>
+                <div class="input-group mb-2 flex items-center ml-4">
+                  <div class="dropdown mr-4">
+                    <select class="form-select" (change)="onItemsPerPageChange($event)" aria-label="Default select example">
+                      <option >Ítems</option>
+                      <option value="5">5</option>
+                      <option selected value="10">10</option>
+                      <option value="15">15</option>
+                      <option value="20">20</option>
+                    </select>
+                  </div>
+                  <div class="flex items-center justify-center">
+                    <mat-paginator
 
-                <mat-paginator
-
-                  [pageSizeOptions]="[5, 10, 20]"
+                    [pageSize]="itemsPerPage"
                   showFirstLastButtons
                   aria-label="Select page of periodic elements"
                 >
                 </mat-paginator>
+                  </div>
+
+                </div>
+
               </div>
             </div>
           </div>
