--- a/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
@@ -127,8 +127,7 @@
             </thead>
 
             <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
-              @for (item of datosInventarioslista | paginate: { itemsPerPage:
-              10, currentPage: p }; track $index) {
+              @for (item of datosInventarioslista | paginate: { itemsPerPage: itemsPerPage, currentPage: p }; track $index) {
               <tr>
                 <td class="size-px whitespace-nowrap">
                   <div class="ps-6 py-3">
@@ -312,9 +311,24 @@
 
             <div>
               <div class="inline-flex gap-x-2">
-                <pagination-controls
-                  (pageChange)="p = $event"
-                ></pagination-controls>
+                <div class="input-group mb-2">
+                  <div class="dropdown mr-4">
+                    <select class="form-select" (change)="onItemsPerPageChange($event)" aria-label="Default select example">
+                      <option >Ítems</option>
+                      <option value="5">5</option>
+                      <option selected value="10">10</option>
+                      <option value="15">15</option>
+                      <option value="20">20</option>
+                    </select>
+                  </div>
+                  <div class="flex items-center justify-center">
+                    <pagination-controls
+                    (pageChange)="p = $event"
+                  ></pagination-controls>
+                  </div>
+
+                </div>
+
               </div>
             </div>
           </div>
