12_02_2025 COLORES EN EL HEADER DE REGISTRO ASIGNACION PARA EL MODO DARK CORREGIDO

--- a/src/app/Ui/Modules/Asignaciones/page/registro-asignar-page/registro-asignar-page.component.html
+++ b/src/app/Ui/Modules/Asignaciones/page/registro-asignar-page/registro-asignar-page.component.html
@@ -30,33 +30,33 @@
               >
                 <div>
                   <span
-                    class="block text-xs uppercase text-gray-500 dark:text-neutral-500"
+                    class="block text-xs uppercase text-gray-500"
                     >Fecha Asignación:</span
                   >
                   <span
-                    class="block text-sm font-medium text-gray-800 dark:text-neutral-200"
+                    class="block text-sm font-medium text-gray-800"
                     >{{currentDate}}</span
                   >
                 </div>
 
                 <div>
                   <span
-                    class="block text-xs uppercase text-gray-500 dark:text-neutral-500"
+                    class="block text-xs uppercase text-gray-500"
                     >Estado:</span
                   >
                   <span
-                    class="block text-sm font-medium text-gray-800 dark:text-neutral-200"
+                    class="block text-sm font-medium text-gray-800"
                     >Activo</span
                   >
                 </div>
 
                 <div>
                   <span
-                    class="block text-xs uppercase text-gray-500 dark:text-neutral-500"
+                    class="block text-xs uppercase text-gray-500"
                     >Ruc Empresa:</span
                   >
                   <span
-                    class="block text-sm font-medium text-gray-800 dark:text-neutral-200"
+                    class="block text-sm font-medium text-gray-800 "
                     >{{ rucEmpresa }}</span
                   >
                 </div>
