--- a/src/app/Ui/Modules/Asignaciones/page/registro-asignar-page/registro-asignar-page.component.html
+++ b/src/app/Ui/Modules/Asignaciones/page/registro-asignar-page/registro-asignar-page.component.html
@@ -29,36 +29,30 @@
                 class="mt-0 mb-5 sm:mt-10 grid grid-cols-2 sm:grid-cols-3 gap-5"
               >
                 <div>
-                  <span
-                    class="block text-xs uppercase text-gray-500"
+                  <span class="block text-xs uppercase text-gray-500"
                     >Fecha Asignación:</span
                   >
-                  <span
-                    class="block text-sm font-medium text-gray-800"
-                    >{{currentDate}}</span
-                  >
+                  <span class="block text-sm font-medium text-gray-800">{{
+                    currentDate
+                  }}</span>
                 </div>
 
                 <div>
-                  <span
-                    class="block text-xs uppercase text-gray-500"
+                  <span class="block text-xs uppercase text-gray-500"
                     >Estado:</span
                   >
-                  <span
-                    class="block text-sm font-medium text-gray-800"
+                  <span class="block text-sm font-medium text-gray-800"
                     >Activo</span
                   >
                 </div>
 
                 <div>
-                  <span
-                    class="block text-xs uppercase text-gray-500"
+                  <span class="block text-xs uppercase text-gray-500"
                     >Ruc Empresa:</span
                   >
-                  <span
-                    class="block text-sm font-medium text-gray-800 "
-                    >{{ rucEmpresa }}</span
-                  >
+                  <span class="block text-sm font-medium text-gray-800">{{
+                    rucEmpresa
+                  }}</span>
                 </div>
               </div>
 
@@ -94,7 +88,11 @@
             >
               Cancelar
             </button>
-            <button type="submit" class="btn btn-primary">Guardar</button>
+            <button
+            [disabled]="
+                      formularioRegistro.controls['usuario'].invalid
+                    "
+            type="submit" class="btn btn-primary">Guardar</button>
           </div>
         </form>
       </div>
