12_02_2025 DISEO BUTTON ASIGNAR MEJORADO

--- a/src/app/Ui/Modules/Asignaciones/components/tabla-inventarios-asignados/tabla-inventarios-asignados.component.html
+++ b/src/app/Ui/Modules/Asignaciones/components/tabla-inventarios-asignados/tabla-inventarios-asignados.component.html
@@ -64,6 +64,7 @@
                   (click)="
                     ObtenerDetatosInventarios(item.rucempresa, item.idcarga)
                   "
+                  class="w-full"
                   title="none"
                   type="button"
                   aria-haspopup="dialog"
