--- a/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
@@ -262,11 +262,13 @@
                           data-bs-toggle="dropdown"
                           aria-expanded="false"
                         ></button>
-                        <ul class="dropdown-menu">
+                        <ul class="dropdown-menu p-2">
                           <descargar-reporte-excel
                             [rucEmpresa]="item.rucempresa"
                             [idCarga]="item.idcarga"
                           />
+
+                          <hr class="my-2">
 
                           <button
                             class="btn btn-secondary w-full"
