--- a/src/app/Ui/Modules/configuration/Empresas/components/header/header-table/header-table.component.html
+++ b/src/app/Ui/Modules/configuration/Empresas/components/header/header-table/header-table.component.html
@@ -1,14 +1,14 @@
 <div
-  class="container-header px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-b border-gray-200 dark:border-neutral-700"
+  class="container-header px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-b border-gray-200 "
 >
   <div>
-    <h2 class="text-xl font-semibold text-gray-100 dark:text-neutral-200">
+    <h2 class="text-xl font-semibold text-gray-100 ">
       EMPRESAS
     </h2>
-    <p class="text-sm text-gray-100 dark:text-neutral-400">
+    <p class="text-sm text-gray-100 ">
       Listado de las empresas
       <a
-        class="inline-flex items-center gap-x-1.5 text-gray-100 decoration-2 hover:underline focus:outline-none focus:underline font-medium dark:text-blue-500"
+        class="inline-flex items-center gap-x-1.5 text-gray-100 decoration-2 hover:underline focus:outline-none focus:underline font-medium "
         >empresas</a
       >
       a cargo
