--- a/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.html
+++ b/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.html
@@ -50,23 +50,23 @@
     <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
 
       @for (item of DatosUsuarios; track $index) {
-        <tr class="bg-white hover:bg-gray-50 dark:bg-neutral-900 dark:hover:bg-neutral-800">
+        <tr class="bg-white hover:bg-gray-50 ">
           <td class="size-px whitespace-nowrap">
-            <button type="button" class="block" aria-haspopup="dialog" aria-expanded="false" aria-controls="hs-ai-invoice-modal" data-hs-overlay="#hs-ai-invoice-modal">
+            <button type="button" class="block" aria-haspopup="dialog" aria-expanded="false" aria-controls="hs-ai-invoice-modal">
               <span class="block px-6 py-2">
                 <span class="font-mono text-sm text-blue-600 dark:text-blue-500">{{item.idusuario}}</span>
               </span>
             </button>
           </td>
           <td class="size-px whitespace-nowrap">
-            <button type="button" class="block" aria-haspopup="dialog" aria-expanded="false" aria-controls="hs-ai-invoice-modal" data-hs-overlay="#hs-ai-invoice-modal">
+            <button type="button" class="block" aria-haspopup="dialog" aria-expanded="false" aria-controls="hs-ai-invoice-modal" >
               <span class="block px-6 py-2">
                 <span class="text-sm text-gray-600 dark:text-neutral-400">{{item.cargo}}</span>
               </span>
             </button>
           </td>
           <td class="size-px whitespace-nowrap">
-            <button type="button" class="block" aria-haspopup="dialog" aria-expanded="false" aria-controls="hs-ai-invoice-modal" data-hs-overlay="#hs-ai-invoice-modal">
+            <button type="button" class="block" aria-haspopup="dialog" aria-expanded="false" aria-controls="hs-ai-invoice-modal" >
               @if (item.estado == "1") {
                 <span class="block px-6 py-2">
                   <span class="py-1 px-1.5 inline-flex items-center gap-x-1 text-xs font-medium bg-teal-100 text-teal-800 rounded-full dark:bg-teal-500/10 dark:text-teal-500">
@@ -90,14 +90,14 @@
             </button>
           </td>
           <td class="size-px whitespace-nowrap">
-            <button type="button" class="block" aria-haspopup="dialog" aria-expanded="false" aria-controls="hs-ai-invoice-modal" data-hs-overlay="#hs-ai-invoice-modal">
+            <button type="button" class="block" aria-haspopup="dialog" aria-expanded="false" aria-controls="hs-ai-invoice-modal" >
               <span class="block px-6 py-2">
                 <span class="text-sm text-gray-600 dark:text-neutral-400">{{item.nombreusuario}}</span>
               </span>
             </button>
           </td>
           <td class="size-px whitespace-nowrap">
-            <button type="button" class="block" aria-haspopup="dialog" aria-expanded="false" aria-controls="hs-ai-invoice-modal" data-hs-overlay="#hs-ai-invoice-modal">
+            <button type="button" class="block" aria-haspopup="dialog" aria-expanded="false" aria-controls="hs-ai-invoice-modal">
               <span class="block px-6 py-2">
                 <span class="text-sm text-gray-600 dark:text-neutral-400">{{item.apellido}}</span>
               </span>
@@ -126,7 +126,7 @@
   <div class="px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-t border-gray-200 dark:border-neutral-700">
     <div>
       <p class="text-sm text-gray-600 dark:text-neutral-400">
-        <span class="font-semibold text-gray-800 dark:text-neutral-200">9</span> results
+        <span class="font-semibold text-gray-800 dark:text-neutral-200">{{DatosUsuarios.length}}</span> Registros
       </p>
     </div>
 
