12_02_2025 DELETE CLASES PARA MODO DARK EN USUARIOS

--- a/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.html
+++ b/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.html
@@ -5,7 +5,7 @@
       <tr>
         <th scope="col" class="px-6 py-3 text-start">
           <div class="flex items-center gap-x-2">
-            <span class="text-xs font-semibold uppercase tracking-wide text-gray-800 dark:text-neutral-200">
+            <span class="text-xs font-semibold uppercase tracking-wide text-gray-800 ">
               Código usuario
             </span>
           </div>
@@ -13,7 +13,7 @@
 
         <th scope="col" class="px-6 py-3 text-start">
           <div class="flex items-center gap-x-2">
-            <span class="text-xs font-semibold uppercase tracking-wide text-gray-800 dark:text-neutral-200">
+            <span class="text-xs font-semibold uppercase tracking-wide text-gray-800 ">
               Cargo
             </span>
           </div>
@@ -21,7 +21,7 @@
 
         <th scope="col" class="px-6 py-3 text-start">
           <div class="flex items-center gap-x-2">
-            <span class="text-xs font-semibold uppercase tracking-wide text-gray-800 dark:text-neutral-200">
+            <span class="text-xs font-semibold uppercase tracking-wide text-gray-800 ">
               Estado
             </span>
           </div>
@@ -29,7 +29,7 @@
 
         <th scope="col" class="px-6 py-3 text-start">
           <div class="flex items-center gap-x-2">
-            <span class="text-xs font-semibold uppercase tracking-wide text-gray-800 dark:text-neutral-200">
+            <span class="text-xs font-semibold uppercase tracking-wide text-gray-800 ">
               Nombres
             </span>
           </div>
@@ -37,7 +37,7 @@
 
         <th scope="col" class="px-6 py-3 text-start">
           <div class="flex items-center gap-x-2">
-            <span class="text-xs font-semibold uppercase tracking-wide text-gray-800 dark:text-neutral-200">
+            <span class="text-xs font-semibold uppercase tracking-wide text-gray-800">
               Apellidos
             </span>
           </div>
@@ -54,7 +54,7 @@
           <td class="size-px whitespace-nowrap">
             <button type="button" class="block" aria-haspopup="dialog" aria-expanded="false" aria-controls="hs-ai-invoice-modal">
               <span class="block px-6 py-2">
-                <span class="font-mono text-sm text-blue-600 dark:text-blue-500">{{item.idusuario}}</span>
+                <span class="font-mono text-sm text-blue-600 ">{{item.idusuario}}</span>
               </span>
             </button>
           </td>
@@ -126,7 +126,7 @@
   <div class="px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-t border-gray-200 dark:border-neutral-700">
     <div>
       <p class="text-sm text-gray-600 dark:text-neutral-400">
-        <span class="font-semibold text-gray-800 dark:text-neutral-200">{{DatosUsuarios.length}}</span> Registros
+        <span class="font-semibold text-gray-800 ">{{DatosUsuarios.length}}</span> Registros
       </p>
     </div>
 
