12_02_2025 COLORES DARK ARREGLADO PARA EL TITLE JEADER DE LA TABLA CARGAR INVENTARIO

--- a/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
@@ -14,10 +14,10 @@
             class="max-w-sm w-full min-h-[400px] flex flex-col justify-center mx-auto px-6 py-4"
           >
             <div
-              class="flex justify-center items-center size-[46px] bg-gray-100 rounded-lg dark:bg-neutral-800"
+              class="flex justify-center items-center size-[46px] bg-gray-100 rounded-lg"
             >
               <svg
-                class="shrink-0 size-6 text-gray-600 dark:text-neutral-400"
+                class="shrink-0 size-6 text-gray-600 "
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
                 height="16"
@@ -33,10 +33,10 @@
               </svg>
             </div>
 
-            <h2 class="mt-5 font-semibold text-gray-800 dark:text-white">
+            <h2 class="mt-5 font-semibold text-gray-800 ">
               Error al obtener los datos
             </h2>
-            <p class="mt-2 text-sm text-gray-600 dark:text-neutral-400">
+            <p class="mt-2 text-sm text-gray-600 ">
               Refresque la página para poder a cargar los datos
             </p>
             <div class="mt-5 flex flex-col sm:flex-row gap-2">
