--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -1,4 +1,4 @@
-<table class="min-w-full divide-y divide-gray-200 dark:divide-neutral-700">
+<table class="min-w-full divide-y divide-gray-200 ">
   <thead class="bg-gray-50 dark:bg-neutral-900">
     <tr>
       @for (item of encabezadoTable; track $index) {
@@ -15,7 +15,7 @@
     </tr>
   </thead>
 
-  <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
+  <tbody class="divide-y divide-gray-200 ">
     @for (item of datosInventarioslista; track $index;) {
     <tr>
       <td class="size-px whitespace-nowrap">
@@ -76,7 +76,7 @@
 
 <!-- Footer -->
 <div
-  class="px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-t border-gray-200 dark:border-neutral-700"
+  class="px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-t border-gray-200 "
 >
   <div>
     <p class="text-sm text-gray-600">
