12_02_2025 COLORES DARK EN EL SUBTITULO menu ARREGLADO

--- a/src/app/Ui/Shared/Components/organisms/sidebar/sidebar.component.html
+++ b/src/app/Ui/Shared/Components/organisms/sidebar/sidebar.component.html
@@ -17,7 +17,7 @@
 
     <div class="h-full overflow-y-auto [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:bg-gray-300 dark:[&::-webkit-scrollbar-track]:bg-neutral-700 dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500">
       <nav class="hs-accordion-group p-3 w-full flex flex-col flex-wrap" data-hs-accordion-always-open aria-label="nav">
-        <h4 class="flex justify-between items-center gap-x-3.5 py-2 px-2.5  text-sm text-[#00D1AE]  rounded-lg dark:bg-neutral-700 dark:text-white">Menu</h4>
+        <h4 class="flex justify-between items-center gap-x-3.5 py-2 px-2.5  text-sm text-[#00D1AE]  rounded-lg ">Menu</h4>
         <ul class="flex flex-col space-y-1">
           <menu-opciones />
         </ul>
