--- a/src/app/Ui/Modules/Asignaciones/components/header-page-asignar/header-page-asignar.component.html
+++ b/src/app/Ui/Modules/Asignaciones/components/header-page-asignar/header-page-asignar.component.html
@@ -2,10 +2,10 @@
   class="container-header px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-b border-gray-200"
 >
   <div>
-    <h2 class="text-xl font-semibold text-gray-100 dark:text-neutral-200">
+    <h2 class="text-xl font-semibold text-gray-100 ">
       ASIGNAR USUARIO
     </h2>
-    <p class="text-sm text-gray-100 dark:text-neutral-400">
+    <p class="text-sm text-gray-100 ">
       Asigna usuarios a tus inventarios de
       <a
         class="inline-flex items-center gap-x-1.5 text-gray-100 decoration-2 hover:underline focus:outline-none focus:underline font-medium "
