12_02_2025 ADD PAGINADO CARGA INVENTARIO

--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -16,8 +16,15 @@
   </thead>
 
   <tbody class="divide-y divide-gray-200 ">
-    @for (item of datosInventarioslista; track $index;) {
+    @for (item of datosInventarioslista | paginate: { itemsPerPage: itemsPerPage, currentPage: p }; track $index;) {
     <tr>
+      <!-- <td class="size-px whitespace-nowrap">
+        <button class="px-6 py-3 flex gap-2 align-center">
+          <span class="text-sm text-gray-600 dark:text-neutral-400">
+            {{ $index.toString() }}
+          </span>
+        </button>
+      </td> -->
       <td class="size-px whitespace-nowrap">
         <td-table-descripcion [descripcion]="item.descripcion" />
       </td>
@@ -78,13 +85,35 @@
 <div
   class="px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-t border-gray-200 "
 >
-  <div>
+  <!-- <div>
     <p class="text-sm text-gray-600">
       <span class="font-semibold text-gray-800">{{
         datosInventarioslista.length
       }}</span>
       Inventarios
     </p>
+  </div> -->
+  <div>
+    <div class="inline-flex gap-x-2">
+      <div class="input-group mb-2">
+        <div class="dropdown mr-4">
+          <select class="form-select" (change)="onItemsPerPageChange($event)" aria-label="Default select example">
+            <option >Ítems</option>
+            <option value="5">5</option>
+            <option selected value="10">10</option>
+            <option value="15">15</option>
+            <option value="20">20</option>
+          </select>
+        </div>
+        <div class="flex items-center justify-center">
+          <pagination-controls
+          (pageChange)="p = $event"
+        ></pagination-controls>
+        </div>
+
+      </div>
+
+    </div>
   </div>
 </div>
 
