12_02_2025 ADD PAGINADO OPCIÓN ITEM DESHABILITADO

--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -98,7 +98,9 @@
       <div class="input-group mb-2">
         <div class="dropdown mr-4">
           <select class="form-select" (change)="onItemsPerPageChange($event)" aria-label="Default select example">
-            <option >Ítems</option>
+            <option value="" disabled selected>
+              Ítems
+            </option>
             <option value="5">5</option>
             <option selected value="10">10</option>
             <option value="15">15</option>
