--- a/src/app/Ui/Modules/Carga_Inventario/Page/detalle-carga-inventarios/detalle-carga-inventarios.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/detalle-carga-inventarios/detalle-carga-inventarios.component.html
@@ -166,7 +166,9 @@
                       (change)="onItemsPerPageChange($event)"
                       aria-label="Default select example"
                     >
-                      <option>Ítems</option>
+                    <option value="" disabled selected>
+                      Ítems
+                    </option>
                       <option value="5">5</option>
                       <option selected value="10">10</option>
                       <option value="15">15</option>
