12_02_2025 BG DE HEADER TABLE DE REPORTES SIN MODO DARK

--- a/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
@@ -68,14 +68,14 @@
           }@else {
           <!-- Table -->
           <table
-            class="min-w-full border divide-y divide-gray-200 dark:divide-neutral-700"
+            class="min-w-full border divide-y divide-gray-200 "
           >
             <thead class="bg-gray-50 dark:bg-neutral-900">
               <tr>
                 <th scope="col" class="px-6 py-3 text-start">
                   <div class="flex items-center gap-x-2">
                     <span
-                      class="text-xs font-semibold uppercase tracking-wide text-gray-800 dark:text-neutral-200"
+                      class="text-xs font-semibold uppercase tracking-wide text-gray-800 "
                     >
                       Descripción
                     </span>
@@ -85,7 +85,7 @@
                 <th scope="col" class="px-6 py-3 text-start">
                   <div class="flex items-center gap-x-2">
                     <span
-                      class="text-xs font-semibold uppercase tracking-wide text-gray-800 dark:text-neutral-200"
+                      class="text-xs font-semibold uppercase tracking-wide text-gray-800 "
                     >
                       Usuario
                     </span>
@@ -95,7 +95,7 @@
                 <th scope="col" class="px-6 py-3 text-start">
                   <div class="flex items-center gap-x-2">
                     <span
-                      class="text-xs font-semibold uppercase tracking-wide text-gray-800 dark:text-neutral-200"
+                      class="text-xs font-semibold uppercase tracking-wide text-gray-800 "
                     >
                       Detalle
                     </span>
@@ -105,7 +105,7 @@
                 <th scope="col" class="px-6 py-3 text-start">
                   <div class="flex items-center gap-x-2">
                     <span
-                      class="text-xs font-semibold uppercase tracking-wide text-gray-800 dark:text-neutral-200"
+                      class="text-xs font-semibold uppercase tracking-wide text-gray-800 "
                     >
                       Estado
                     </span>
